--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -4,22 +4,26 @@
   "description": "",
   "scripts": {
     "start": "etherlime ganache --networkId=1337",
+    "start:dev": "run-p start deploy:local",
     "build": "etherlime compile --runs=999 --exportAbi",
     "deploy:local": "etherlime deploy --runs=500",
     "deploy:rinkeby": "etherlime deploy --network=rinkeby --runs=500",
     "deploy:rinkeby:debug": "node --inspect-brk ./node_modules/etherlime/cli.js --timeout 30000 deploy --network=rinkeby --runs=50",
     "test": "etherlime test --output=none --timeout 100000 --gas-report=true --runs=999",
-    "test-one": "etherlime test test/anglo-rppVault/anglo-rppVault.test.js --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-cov": "etherlime coverage --timeout 100000 --runs=999"
   },
   "author": "Linum Labs",
   "license": "MIT",
   "dependencies": {
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.0",
     "dotenv": "8.0.0",
     "etherlime": "2.2.0",
     "etherlime-lib": "1.1.3",
     "ethers": "4.0.31",
-    "solc": "0.5.10"
+    "solc": "0.5.13"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "typescript": "3.7.2"
   }
 }
