--- a/webapp/package.json
+++ b/webapp/package.json
@@ -219,7 +219,7 @@
     "tslint": "^5.11.0",
     "tslint-loader": "^3.4.3",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.7.0-beta",
+    "typescript": "3.7.2",
     "typescript-plugin-styled-components": "^1.0.0",
     "url-loader": "1.1.2",
     "webpack": "4.30.0",
