Added tests, restructured for only wild system

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -15,7 +15,7 @@
   "author": "Linum Labs",
   "license": "MIT",
   "dependencies": {
-    "bignumber.js": "^9.0.0",
+    "bignumber.js": "9.0.0",
     "dotenv": "8.0.0",
     "etherlime": "2.2.0",
     "etherlime-lib": "1.1.3",
