wire up listeners for address & chain

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -20,6 +20,7 @@
     "etherlime": "2.2.0",
     "etherlime-lib": "1.1.3",
     "ethers": "4.0.31",
+    "openzeppelin-solidity": "^2.4.0",
     "solc": "0.5.13"
   },
   "devDependencies": {
