--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -20,6 +20,7 @@
     "etherlime": "2.2.0",
     "etherlime-lib": "1.1.3",
     "ethers": "4.0.31",
-    "solc": "0.5.10"
+    "solc": "0.5.10",
+    "openzeppelin-solidity": "2.3.0"
   }
 }
