--- a/webapp/package.json
+++ b/webapp/package.json
@@ -96,6 +96,7 @@
     "react-helmet": "6.0.0-beta",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-svg": "^10.0.26",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "request": "^2.88.0",
