--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -10,7 +10,8 @@
     "deploy:rinkeby:debug": "node --inspect-brk ./node_modules/etherlime/cli.js --timeout 30000 deploy --network=rinkeby --runs=50",
     "test": "etherlime test --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-one": "etherlime test test/anglo-rppVault/anglo-rppVault.test.js --output=none --timeout 100000 --gas-report=true --runs=999",
-    "test-cov": "etherlime coverage --timeout 100000 --runs=999"
+    "test-cov": "etherlime coverage --timeout 100000 --runs=999",
+    "flat": "etherlime flatten ./basic-implementation/CyclicWithdraw.sol"
   },
   "author": "Linum Labs",
   "license": "MIT",
