--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -13,7 +13,8 @@
     "test-one": "etherlime test test/anglo-rppVault/anglo-rppVault.test.js --output=none --timeout 100000 --gas-report=true --runs=999",
     "test-cov": "etherlime coverage --timeout 100000 --runs=999",
     "flat": "etherlime flatten ./basic-implementation/CyclicWithdraw.sol",
-    "remixd": "remixd -s . --remix-ide https://remix.ethereum.org"
+    "remixd": "remixd -s . --remix-ide https://remix.ethereum.org",
+    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ 'build/*.json'"
   },
   "author": "Linum Labs",
   "license": "MIT",
@@ -22,13 +23,15 @@
     "dotenv": "8.0.0",
     "etherlime": "2.2.0",
     "etherlime-lib": "1.1.3",
-    "ethers": "4.0.31",
-    "solc": "0.5.10",
-    "openzeppelin-solidity": "2.3.0"
+    "openzeppelin-solidity": "2.3.0",
+    "solc": "0.5.10"
   },
   "devDependencies": {
+    "ethers": "^4.0.40",
     "npm-run-all": "^4.1.5",
-    "typescript": "3.7.2",
-    "remixd": "0.1.8-alpha.14"
+    "remixd": "0.1.8-alpha.14",
+    "typechain": "^1.0.3",
+    "typechain-target-ethers": "^1.0.3",
+    "typescript": "3.7.2"
   }
 }
