--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -4,7 +4,9 @@
 APP_NAME=nobuntu
 APP_SCHEMA=http
 APP_HOST=localhost
-APP_PORT=3000
-API_HOST=localhost:3001/api
+PORT=3001
 
-CHAIN_ID=
+CHAIN_ID=1337
+DAI_ADDRESS=0xc9707E1e496C12f1Fa83AFbbA8735DA697cdBf64
+POOL_REGISTRY_ADDRESS=0x655341AabD39a5ee0939796dF610aD685a984C53
+POOL_FACTORY_ADDRESS=0x0116090EfeC8A6c176A094d3094c58811a7eA39c
