--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -4,7 +4,7 @@ ETHERSCAN_API_KEY=
 DEPLOYER_PRIVATE_KEY=
 # Public address of admin
 ADMIN_ADDRESS_PUBLIC_KEY=
-# As a while number, i.e 15 for 15%
+# As a whole number, i.e 15 for 15%
 PENALTY_PERCENTAGE=
 # The cycle length for the withdraw (can be 0)
 CYCLE_LENGTH=
