--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "etherlime ganache --networkId=1337",
     "start:dev": "run-p start deploy:local",
-    "build": "etherlime compile --runs=999 --exportAbi",
+    "build": "etherlime compile --runs=999 --exportAbi && yarn generate-typings",
     "deploy:local": "etherlime deploy --runs=500",
     "deploy:rinkeby": "etherlime deploy --network=rinkeby --runs=500",
     "deploy:rinkeby:debug": "node --inspect-brk ./node_modules/etherlime/cli.js --timeout 30000 deploy --network=rinkeby --runs=50",
@@ -14,7 +14,7 @@
     "test-cov": "etherlime coverage --timeout 100000 --runs=999",
     "flat": "etherlime flatten ./basic-implementation/CyclicWithdraw.sol",
     "remixd": "remixd -s . --remix-ide https://remix.ethereum.org",
-    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ 'build/*.json'"
+    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ \"build/*.json\""
   },
   "author": "Linum Labs",
   "license": "MIT",
