--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -14,7 +14,7 @@
     "test-cov": "etherlime coverage --timeout 100000 --runs=999",
     "flat": "etherlime flatten ./basic-implementation/CyclicWithdraw.sol",
     "remixd": "remixd -s . --remix-ide https://remix.ethereum.org",
-    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ 'build/*.json'"
+    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ \"build/*.json\""
   },
   "author": "Linum Labs",
   "license": "MIT",
