--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "etherlime ganache --networkId=1337",
+    "start": "etherlime ganache --networkId=1337 -q",
     "start:dev": "run-p start deploy:local",
     "build": "etherlime compile --runs=999 --exportAbi && yarn generate-typings",
     "deploy:local": "etherlime deploy --runs=500",
@@ -14,7 +14,8 @@
     "test-cov": "etherlime coverage --timeout 100000 --runs=999",
     "flat": "etherlime flatten ./basic-implementation/CyclicWithdraw.sol",
     "remixd": "remixd -s . --remix-ide https://remix.ethereum.org",
-    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ \"build/*.json\""
+    "generate-typings": "typechain --target=ethers --outDir contractInterfaces/ \"build/*.json\"",
+    "test-a": "yarn start & yarn test"
   },
   "author": "Linum Labs",
   "license": "MIT",
