update example env file for staging

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -4,9 +4,16 @@
 APP_NAME=nobuntu
 APP_SCHEMA=http
 APP_HOST=localhost
-PORT=3001
+APP_PORT=3000
 
-CHAIN_ID=1337
-DAI_ADDRESS=0xc9707E1e496C12f1Fa83AFbbA8735DA697cdBf64
-POOL_REGISTRY_ADDRESS=0x655341AabD39a5ee0939796dF610aD685a984C53
-POOL_FACTORY_ADDRESS=0x0116090EfeC8A6c176A094d3094c58811a7eA39c
+# Local
+# CHAIN_ID=1337
+# DAI_ADDRESS=0xc9707E1e496C12f1Fa83AFbbA8735DA697cdBf64
+# POOL_REGISTRY_ADDRESS=0x655341AabD39a5ee0939796dF610aD685a984C53
+# POOL_FACTORY_ADDRESS=0x0116090EfeC8A6c176A094d3094c58811a7eA39c
+
+# Staging-Rinkeby
+CHAIN_ID=4
+DAI_ADDRESS=0x0598AE3120034b03FAb275219Aa8c359F6aD2641
+POOL_REGISTRY_ADDRESS=0xA2B2e3669F6011CFf04794656e8b949A24F16551
+POOL_FACTORY_ADDRESS=0x5C9fa5C01BB2e6bB1ef43EFE6d449d68eC0A23Fc
