wire up penalty event

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "etherlime ganache --networkId=1337",
-    "start:dev": "run-p start deploy:local",
+    "start:silent": "etherlime ganache --networkId=1337 --output=none",
+    "start:dev": "run-p start:silent deploy:local",
     "build": "etherlime compile --runs=999 --exportAbi && yarn generate-typings",
     "deploy:local": "etherlime deploy --runs=500",
     "deploy:rinkeby": "etherlime deploy --network=rinkeby --runs=500",
