--- a/blockchain/.env.example
+++ b/blockchain/.env.example
@@ -1,22 +1,39 @@
 # API key for etherscan
 ETHERSCAN_API_KEY=
-# Private key for deployer account
-DEPLOYER_PRIVATE_KEY=
+
+# Private key for deployer account (local/rinkeby/mainnet)
+# DEPLOYER_PRIVATE_KEY=
+
+INFURA_API_KEY_RINKEBY=
+
 # Public address of admin
 ADMIN_ADDRESS_PUBLIC_KEY=
+
+# Addresses to mint Dai to (local and Rinkeby)
+ADDESSES_TO_MINT=
+
+# For local deployment
+
 # As a whole number, i.e 15 for 15%
 PENALTY_PERCENTAGE=
+
 # The cycle length for the withdraw (can be 0)
 CYCLE_LENGTH=
+
 # Name for the penalty contract
 PENALTY_NAME=
-# Description for the penalty contract
-PENALTY_DESCRIPTION=
+
+# This would block users from being able to withdraw funds in violation of the time period
+CAN_WITHDRAW_IN_VIOLATION=
+
+# This would block users from being able to withdraw interest in violation of the time period
+CAN_WITHDRAW_INTEREST_IN_VIOLATION=
+
 # Withdraw contract name
 WITHDRAW_NAME=
-# Withdraw contract description 
-WITHDRAW_DESCRIPTION=
-# 
+
+# Name for the pool
 POOL_NAME=
-# 
+
+# Description of the pool
 POOL_DESCRIPTION=
