remove references of nobuntu

--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nobuntu-blockchain",
+  "name": "timedeposit-blockchain",
   "version": "1.0.0",
   "description": "",
   "scripts": {
